Minor code upgrade