@@ -17,7 +17,6 @@
 package com.webfirmframework.wffweb.css;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.logging.Level;
@@ -367,7 +366,7 @@ public class BackgroundImage extends AbstractCssProperty<BackgroundImage> implem
         if (urlCss3Values == null) {
             return null;
         }
-        return Collections.unmodifiableList(Arrays.asList(urlCss3Values));
+        return List.of(urlCss3Values);
     }
 
     /**
